--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ main p {
   border-radius: 10px;
   padding-top: 15px;
   padding-bottom: 20px;
-  background-color: #0d9ef1bd;
+  background-color: #fbfbfb;
   padding-left: 15px;
   }
 }
