--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
 	width: 100%;
 	height: 100%;
 	margin-bottom: -5px;
-	transition: all 0.3s ease-out;
+	transition: all 0.5s ease-out;
 	position: relative;
 	z-index: 2;
 }
@@ -72,7 +72,17 @@ body {
   margin: 5px;
   border: 3px solid #ffffff;
 	outline: none;
-  }
+}
+#container img {
+  width: 300px;
+  height: 300px;
+  transition: all 0.6s ease-out;
+}
+#container video {
+  width: 300px;
+  height: 300px;
+  transition: all 0.6s ease-out;
+}
 }
 header h1 {
   font-family: "Dancing Script", cursive;
