--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
 .primerParrafo {
   display: flex;
 }
-
 .primerParrafo > p {
   color: white;
   padding: 20px 50px;
@@ -18,6 +17,17 @@ body {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   letter-spacing: 1px;
   font-size: 18px;
+}
+
+@media (max-width: 800px) {
+.primerParrafo{
+  display: inline-block;
+  padding: 5px;
+}
+.primerParrafo > p {
+  font-size: 12px;
+  padding: 10px;
+}
 }
 /* PRODUCTOS */
 .container{
